force-app/main/default/objects/Purecloud_Master_Queue__c/Purecloud_Master_Queue__c.object-meta.xml
<CustomObject>
    <label>Purecloud Master Queue</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purecloud Master Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>