force-app/main/default/objects/Purecloud_Master_Queue__c/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <externalId>true</externalId>
    <label>Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>