force-app/main/default/objects/Purecloud_Master_Queue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;--None--&gt;</fullName>
                <default>true</default>
                <label>&lt;--None--&gt;</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>